# py-simple-auth-api

./: README.md  main.py  pyproject.toml
app/boundaries/: create_user_schema.py
app/boundaries/auth/: jwt_schema.py  login_schema.py  validate_token_schema.py
app/domain/: jwt.py
app/modules/auth/: auth_container.py  auth_router.py  auth_service.py  auth_settings.py
app/modules/core/: container.py
